# tauv-autonomy

./: CLAUDE.md  CMakeLists.txt  README.md  SESSION_NOTES.md  forceOptimizer.py  package.xml  setup.cfg  setup.py
Osprey/launch/: osprey.launch.py  pid_tuning_real.launch.py  sim_model.launch
Osprey/meshes/: 59.stl  63.stl  67.stl
Osprey/urdf/: sim_model.urdf
config/: controller_params.yaml  play_sequence.yaml  thruster_params.yaml  waypoints.yaml
scripts/: controller.py  force_to_gain.py  ned_to_enu_wrench.py  play_commands.py  thruster_allocator.py  twist_to_wrench.py  waypoint_runner.py
tauv_autonomy/: controller.py  force_optimizer.py  force_optimizer_2.py  force_optimizer_3.py  force_to_gain.py  pid.py  thruster_forces.py  thruster_rpms.py  thruster_saturation.py  utils.py  wrench.py
tauv_controller/: package.xml  setup.cfg  setup.py
tauv_controller/config/: motor_equations.yaml  pid_history.csv
tauv_controller/tauv_controller/: controller.py  force_optimizer.py  force_to_gain.py  oscintillating.py  pid.py  thruster_forces.py  thruster_rpms.py  thruster_saturation.py
tauv_mission/: CMakeLists.txt  package.xml
tauv_mission/config/: setpoints.yaml
tauv_mission/include/tauv_mission/: trajectory_manager.hpp
tauv_mission/launch/: teleop.launch.py
tauv_mission/src/: trajectory_manager.cpp
tauv_mission/tauv_mission/: teleop.py
tauv_trajectory_planner/: package.xml  setup.cfg  setup.py
tauv_trajectory_planner/tauv_trajectory_planner/: __init__.py  trajectory_planner_node.py
