<?xml version="1.0"?>
<package format="3">
  <name>tauv_mission</name>
  <version>0.0.0</version>
  <description>Mission-level tools and teleoperation CLI for TartanAUV vehicles.</description>
  <maintainer email="gryabtse@andrew.cmu.edu">gleb</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>ament_index_cpp</depend>
  <depend>yaml-cpp</depend>

  <exec_depend>rclpy</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
